@@ -3,6 +3,8 @@ package jvm.learning.wk7;
 public class Demo1 {
 
     public static void main(String[] args) {
+
+        //-XX:NewSize=5242880 -XX:MaxNewSize=5242880 -XX:InitialHeapSize=10485760 -XX:MaxHeapSize=10485760 -XX:SurvivorRatio=8 -XX:PretenureSizeThreshold=10485760 -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:Demo1.log
         byte[] array1 = new byte[1024 * 1024];
         array1 = new byte[1024 * 1024];
         array1 = new byte[1024 * 1024];
